--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,8 +1,19 @@
-<h1>トップページ</h1>
+<h1>Kiroku App</h1>
 <% if user_signed_in? %>
-  <%= "こんにちは！#{current_user.nickname}さん！" %>
+  <%= "こんにちは、#{current_user.nickname}さん！" %>
   <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
 <% else %>
   <%= link_to "新規登録", new_user_registration_path%>
   <%= link_to "ログイン", new_user_session_path%>
+<% end %>
+
+<%# if notice %>
+  <p class="notice"><%= notice %></p>
+<%# end %>
+
+<% if @current_session.present? %>
+  <p>セッション中: 開始時刻 <%= @current_session.started_at.strftime("%H:%M") %></p>
+  <%= button_to "セッション終了", session_path(@current_session), method: :patch, class: "btn btn-danger" %>
+<% else %>
+  <%= button_to "セッション開始", sessions_path, method: :post, class: "btn btn-primary" %>
 <% end %>
